parser/src/snapshots/squawk_parser__parse__tests__json_index_operator.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: IndexStmt(
                    IndexStmt {
                        access_method: "btree",
                        idxname: Some(
                            "idx_a_foo_bar",
                        ),
                        index_params: [
                            IndexElem(
                                IndexElem {
                                    name: None,
                                    expr: Some(
                                        Object({
                                            "A_Expr": Object({
                                                "kind": Number(
                                                    0,
                                                ),
                                                "lexpr": Object({
                                                    "ColumnRef": Object({
                                                        "fields": Array([
                                                            Object({
                                                                "String": Object({
                                                                    "str": String(
                                                                        "foo",
                                                                    ),
                                                                }),
                                                            }),
                                                        ]),
                                                        "location": Number(
                                                            66,
                                                        ),
                                                    }),
                                                }),
                                                "location": Number(
                                                    69,
                                                ),
                                                "name": Array([
                                                    Object({
                                                        "String": Object({
                                                            "str": String(
                                                                "->>",
                                                            ),
                                                        }),
                                                    }),
                                                ]),
                                                "rexpr": Object({
                                                    "A_Const": Object({
                                                        "location": Number(
                                                            72,
                                                        ),
                                                        "val": Object({
                                                            "String": Object({
                                                                "str": String(
                                                                    "bar",
                                                                ),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            }),
                                        }),
                                    ),
                                    indexcolname: None,
                                    collation: None,
                                    opclass: [],
                                    ordering: Default,
                                    nulls_ordering: Default,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "a",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 60,
                            },
                        ),
                        concurrent: true,
                        unique: false,
                        primary: false,
                        isconstraint: false,
                        deferrable: false,
                        initdeferred: false,
                        transformed: false,
                        if_not_exists: true,
                        table_space: None,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    79,
                ),
            },
        ),
    ],
)
