parser/src/snapshots/squawk_parser__parse__tests__migration.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: TransactionStmt(
                    TransactionStmt {
                        kind: Begin,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    6,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: IndexStmt(
                    IndexStmt {
                        access_method: "btree",
                        idxname: "table_name_field_name_idx",
                        index_params: [
                            IndexElem(
                                IndexElem {
                                    name: Some(
                                        "field_name",
                                    ),
                                    expr: None,
                                    indexcolname: None,
                                    collation: None,
                                    opclass: [],
                                    ordering: Default,
                                    nulls_ordering: Default,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "table_name",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 52,
                            },
                        ),
                        concurrent: false,
                        unique: false,
                        primary: false,
                        isconstraint: false,
                        deferrable: false,
                        initdeferred: false,
                        transformed: false,
                        if_not_exists: false,
                        table_space: None,
                    },
                ),
                stmt_location: 7,
                stmt_len: Some(
                    72,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: IndexStmt(
                    IndexStmt {
                        access_method: "btree",
                        idxname: "table_name_field_name_idx",
                        index_params: [
                            IndexElem(
                                IndexElem {
                                    name: Some(
                                        "field_name",
                                    ),
                                    expr: None,
                                    indexcolname: None,
                                    collation: None,
                                    opclass: [
                                        Object({
                                            "String": Object({
                                                "str": String(
                                                    "varchar_pattern_ops",
                                                ),
                                            }),
                                        }),
                                    ],
                                    ordering: Default,
                                    nulls_ordering: Default,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "table_name",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 125,
                            },
                        ),
                        concurrent: false,
                        unique: false,
                        primary: false,
                        isconstraint: false,
                        deferrable: false,
                        initdeferred: false,
                        transformed: false,
                        if_not_exists: false,
                        table_space: None,
                    },
                ),
                stmt_location: 80,
                stmt_len: Some(
                    92,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: TransactionStmt(
                    TransactionStmt {
                        kind: Commit,
                    },
                ),
                stmt_location: 173,
                stmt_len: Some(
                    7,
                ),
            },
        ),
    ],
)
