parser/src/snapshots/squawk_parser__parse__tests__notify_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: NotifyStmt(
                    Object({
                        "conditionname": String(
                            "virtual",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    15,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: NotifyStmt(
                    Object({
                        "conditionname": String(
                            "virtual",
                        ),
                        "payload": String(
                            "This is the payload",
                        ),
                    }),
                ),
                stmt_location: 16,
                stmt_len: Some(
                    38,
                ),
            },
        ),
    ],
)
