parser/src/snapshots/squawk_parser__parse__tests__parse_alter_constraint_regression.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterTableStmt(
                    AlterTableStmt {
                        cmds: [
                            AlterTableCmd(
                                AlterTableCmd {
                                    subtype: AlterConstraint,
                                    name: None,
                                    def: Some(
                                        Constraint(
                                            Constraint {
                                                conname: Some(
                                                    "constraint",
                                                ),
                                                contype: Foreign,
                                                location: None,
                                                raw_expr: None,
                                                keys: None,
                                                indexname: None,
                                                skip_validation: false,
                                                initially_valid: false,
                                            },
                                        ),
                                    ),
                                    behavior: Restrict,
                                    missing_ok: false,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "table",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 13,
                            },
                        ),
                        relkind: Table,
                        missing_ok: false,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    81,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: AlterTableStmt(
                    AlterTableStmt {
                        cmds: [
                            AlterTableCmd(
                                AlterTableCmd {
                                    subtype: AlterConstraint,
                                    name: None,
                                    def: Some(
                                        Constraint(
                                            Constraint {
                                                conname: Some(
                                                    "constraint",
                                                ),
                                                contype: Foreign,
                                                location: None,
                                                raw_expr: None,
                                                keys: None,
                                                indexname: None,
                                                skip_validation: false,
                                                initially_valid: false,
                                            },
                                        ),
                                    ),
                                    behavior: Restrict,
                                    missing_ok: false,
                                },
                            ),
                        ],
                        relation: RangeVar(
                            RangeVar {
                                catalogname: None,
                                schemaname: None,
                                relname: "table",
                                inh: true,
                                relpersistence: "p",
                                alias: None,
                                location: 96,
                            },
                        ),
                        relkind: Table,
                        missing_ok: false,
                    },
                ),
                stmt_location: 82,
                stmt_len: Some(
                    66,
                ),
            },
        ),
    ],
)
